Make sure the navbar content is not shifted because of scrollbars
https://github.com/twbs/bootstrap/issues/1648

--- a/doc/cppformat.less
+++ b/doc/cppformat.less
@@ -3,6 +3,10 @@
 @header-bg: #094d75;
 @icon-font-path: "fonts/";
 
+html {
+  overflow-y: scroll;
+}
+
 .navbar {
   border-radius: 0;
   margin-bottom: 0;
